Add curl script and html for user sign-up

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <p id="message"></p>
+      <form id= "sign-up">
+        <input name="credentials[email]" type="text" placeholder="email" required>
+        <input name="credentials[password]" type="password" placeholder="password" required>
+        <input name="credentials[password_confirmation]" type="password" placeholder="confirm password" required>
+        <button>Sign Up</button>
+
     </body>
 </html>
