User sign in, write curl script for sign-in and change PW, Fix forms in index.html

--- a/index.html
+++ b/index.html
@@ -14,10 +14,18 @@
     <body>
       <p id="message"></p>
       <form id= "sign-up">
-        <input name="credentials[email]" type="text" placeholder="email" required>
+        <input name="credentials[email]" type="text" placeholder="email" required >
         <input name="credentials[password]" type="password" placeholder="password" required>
         <input name="credentials[password_confirmation]" type="password" placeholder="confirm password" required>
         <button>Sign Up</button>
+      </form>
+        <hr>
+        <form id= "sign-in">
+          <input name="credentials[email]" type="text" placeholder="email" required>
+          <input name="credentials[password]" type="password" placeholder="password" required>
+          <button>Sign In</button>
+        </form>
+
 
     </body>
 </html>
