User can change password, update sign-in success message to contain user email

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
           <input name="credentials[password]" type="password" placeholder="password" required>
           <button>Sign In</button>
         </form>
+        <hr>
+        <form id="change-password">
+          <input name="passwords[old]" type="password" placeholder="old password" required>
+          <input name="passwords[new]" type="password" placeholder="new password" required>
+            <button>Change Password</button>
+          </form>
 
 
     </body>
