Create sign-out button and function, curl script for sign-out

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           <input name="passwords[new]" type="password" placeholder="new password" required>
             <button>Change Password</button>
           </form>
+          <hr>
+          <button id="sign-out">Sign Out</button>
 
 
     </body>
