Show and hide buttons when appropriate. Add New Game button when user signs in

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
           </form>
           <hr>
           <button id="sign-out">Sign Out</button>
+          <hr>
+          <button id="new-game">New Game</button>
 
 
     </body>
