Add New Game button, show game board when clicked, hides change password

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
           <button id="sign-out">Sign Out</button>
           <hr>
           <button id="new-game">New Game</button>
+        <div id='game-board'>
+          <div data-cell-index='0'>1</div>
+          <div data-cell-index='1'>2</div>
+          <div data-cell-index='2'>3</div>
+          <div data-cell-index='3'>4</div>
+          <div data-cell-index='4'>5</div>
+          <div data-cell-index='5'>6</div>
+          <div data-cell-index='6'>7</div>
+          <div data-cell-index='7'>8</div>
+          <div data-cell-index='8'>9</div>
+
+        </div>
 
 
     </body>
