--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
           <hr>
           <button id="new-game">New Game</button>
         <div id='game-board'>
-          <div data-cell-index='0'>1</div>
-          <div data-cell-index='1'>2</div>
-          <div data-cell-index='2'>3</div>
-          <div data-cell-index='3'>4</div>
-          <div data-cell-index='4'>5</div>
-          <div data-cell-index='5'>6</div>
-          <div data-cell-index='6'>7</div>
-          <div data-cell-index='7'>8</div>
-          <div data-cell-index='8'>9</div>
-
+          <div class="row">
+            <div id="cell-0"  data-cell-index='0'class="col-4 box">1</div>
+            <div id="cell-1" data-cell-index='1'class="col-4 box">2</div>
+            <div id="cell-2" data-cell-index='2'class="col-4 box">3</div>
+            <div id="cell-3" data-cell-index='3'class="col-4 box">4</div>
+            <div id="cell-4" data-cell-index='4'class="col-4 box">5</div>
+            <div id="cell-5" data-cell-index='5'class="col-4 box">6</div>
+            <div id="cell-6" data-cell-index='6'class="col-4 box">7</div>
+            <div id="cell-7" data-cell-index='7'class="col-4 box">8</div>
+            <div id="cell-8" data-cell-index='8'class="col-4 box">9</div>
+        </div>
         </div>
 
 
