Alternate player between X and O, create API patch request

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <button id="new-game">New Game</button>
           <hr>
         <section class='container'>
-          <div class='row h-100 board'>
+          <div class='row h-100 board' id='board'>
             <div id='cell-0' data-cell-index='0'class="col-4 box"></div>
             <div id='cell-1'data-cell-index='1'class="col-4 box"></div>
             <div id='cell-2'data-cell-index='2'class="col-4 box"></div>
