Working game logic for win/tie, message player that they won

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>Tic Tac Toe</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -38,7 +38,7 @@
           <hr>
         <section class='container'>
           <div class='row h-100 board' id='board'>
-            <div id='cell-0' data-cell-index='0'class="col-4 box"></div>
+            <div id='cell-0'data-cell-index='0'class="col-4 box"></div>
             <div id='cell-1'data-cell-index='1'class="col-4 box"></div>
             <div id='cell-2'data-cell-index='2'class="col-4 box"></div>
 
