Preliminary CSS styling, sign in fields reset after successful sign in

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
+      <h1>Tic Tac <span>Toe</span></h1>
       <p id="message"></p>
       <form id= "sign-up">
         <input name="credentials[email]" type="text" placeholder="email" required >
@@ -38,17 +39,17 @@
           <hr>
         <section class='container'>
           <div class='row h-100 board' id='board'>
-            <div id='cell-0'data-cell-index='0'class="col-4 box"></div>
-            <div id='cell-1'data-cell-index='1'class="col-4 box"></div>
-            <div id='cell-2'data-cell-index='2'class="col-4 box"></div>
+            <div id='cell-0'data-cell-index='0'class="col-4 box click-event"></div>
+            <div id='cell-1'data-cell-index='1'class="col-4 box click-event"></div>
+            <div id='cell-2'data-cell-index='2'class="col-4 box click-event"></div>
 
-            <div id='cell-3'data-cell-index='3'class="col-4 box"></div>
-            <div id='cell-4'data-cell-index='4'class="col-4 box"></div>
-            <div id='cell-5'data-cell-index='5'class="col-4 box"></div>
+            <div id='cell-3'data-cell-index='3'class="col-4 box click-event"></div>
+            <div id='cell-4'data-cell-index='4'class="col-4 box click-event"></div>
+            <div id='cell-5'data-cell-index='5'class="col-4 box click-event"></div>
 
-            <div id='cell-6'data-cell-index='6'class="col-4 box"></div>
-            <div id='cell-7'data-cell-index='7'class="col-4 box"></div>
-            <div id='cell-8'data-cell-index='8'class="col-4 box"></div>
+            <div id='cell-6'data-cell-index='6'class="col-4 box click-event"></div>
+            <div id='cell-7'data-cell-index='7'class="col-4 box click-event"></div>
+            <div id='cell-8'data-cell-index='8'class="col-4 box click-event"></div>
         </div>
       </section>
     </body>
